# paser-mini

./: .ai_context.md  .eslintignore  .eslintrc.json  .gitignore  1.json  2.json  3.json  4.json  5.json  6.json  AGENT.md  CONTENANCE_STRATEGY.md  FIX_POLICY.md  ISSUES.md  Nuevo_sistema.md  PASER-mini.md  PLAN.md  PROTOCOL.md  Plan.md  README.es.md  README.md  README_backup.md  README_copy.md  SYSTEM_INSTRUCTION.txt  TODO.md  TODO_NOTIFY.md  TOOL_TEST_SUITE.md  all-lint-errors.txt  check_autopep8.py  check_black.py  check_disk.py  check_paths.py  class-methods-errors.txt  code.md  debug_sync.py  docker-compose.yml  documento.docx  documento_validado.docx  ejemplo1.txt  ejemplo2.txt  (+64 more)
.cache/: startup.json
config/: chaos_memory_js.db-shm  chaos_memory_js.db-wal  model_cache.json
docs/: AGENT_CAPABILITIES.md  ARCHITECTURE.md  COMMANDS.md  CONTENANCE_STRATEGY.md  DEVELOPMENT.md  FEATURES.md  GEMMA4.md  MEMENTO_MASTER.md  MEMENTO_TECH.md  Nuevo_sistema.md  PROJECT_STRUCTURE.md  PROTOCOL.md  SMART_JSON_PARSER.md  SOURCE_MAP.md  STAFF_OPERATIONAL_PROTOCOL.md  TECHNICAL.md  TEMPORAL_CONTEXT_PROTOCOL.md  THE_JOURNEY.md  TODO.md  TODO_en.md  TOOLS.md  TOOL_INSTALLATION.md  TOOL_REFERENCE.md  TOOL_TEST_SUITE.md  TOOL_USAGE_TIPS.md  analisis.md  code.md  documentation_policy.md  guardia_de_contexto.md  maintainable_software_principles.md  memento_user_guide.md  project_summary.md  session_summary_github_mode.md  staff_policy.md  symbols.md
lint/: parte_00.txt  parte_01.txt  parte_02.txt  parte_03.txt  parte_04.txt  parte_05.txt  parte_06.txt  parte_07.txt  parte_08.txt  (+11 more)
(+689 files in other folders)
