[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paser-mini"
version = "0.1.0"
authors = [
  { name="Author", email="author@example.com" },
]
description = "Agente autónomo minimalista usando ReAct"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "prompt_toolkit",
    "rich",
    "pyright",
    "pynput",
]

[project.scripts]
paser_mini = "paser.main:cli"

[tool.setuptools]
packages = ["paser"]
