[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paser-mini"
version = "0.1.0"
authors = [
  { name="Author", email="author@example.com" },
]
description = "Agente autónomo minimalista usando ReAct"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "prompt_toolkit",
    "rich",
    "pyright",
    "pynput",
    "aiosqlite",

    "black",
    "pytest",
]

[project.scripts]
paser_mini = "src.main:cli"

[tool.setuptools]
packages = ["src"]
